Bug 1337548 - Only send DidComposite to affected tabs. r=dvander, a=gchang